Ajout de la fonctionnalité de modification des surgrades

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,6 +33,10 @@
         <servlet-name>ServletGrade</servlet-name>
         <url-pattern>/ServletGrade/consulter</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ServletGrade</servlet-name>
+        <url-pattern>/ServletGrade/modifier</url-pattern>
+        </servlet-mapping>
     <session-config>
         <session-timeout>
             30
