--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,11 @@
         <servlet-name>ServletIntervention</servlet-name>
         <url-pattern>/ServletIntervention/consulterIntervention</url-pattern>
     </servlet-mapping>
+    
+     <servlet-mapping>
+        <servlet-name>ServletIntervention</servlet-name>
+        <url-pattern>/ServletIntervention/ajouterIntervention</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
