--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,34 +9,53 @@
         <servlet-name>ServletPompier</servlet-name>
         <servlet-class>servlet.ServletPompier</servlet-class>
     </servlet>
+    
     <servlet>
         <servlet-name>ServletGrade</servlet-name>
         <servlet-class>servlet.ServletGrade</servlet-class>
     </servlet>
+
+ 
+    <servlet-mapping>
+        <servlet-name>ServletPompier</servlet-name>
+        <url-pattern>/ServletPompier/*</url-pattern>
+    </servlet-mapping>
+
     <servlet-mapping>
         <servlet-name>ServletPompier</servlet-name>
         <url-pattern>/ServletPompier/lister</url-pattern>
     </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>ServletPompier</servlet-name>
+        <url-pattern>/ServletPompier/associerSurgrade</url-pattern>
+    </servlet-mapping>
+    
     <servlet-mapping>
         <servlet-name>ServletPompier</servlet-name>
         <url-pattern>/ServletPompier/consulter</url-pattern>
     </servlet-mapping>
+
     <servlet-mapping>
         <servlet-name>ServletPompier</servlet-name>
         <url-pattern>/ServletPompier/ajouter</url-pattern>
     </servlet-mapping>
+    
     <servlet-mapping>
         <servlet-name>ServletGrade</servlet-name>
         <url-pattern>/ServletGrade/lister</url-pattern>
     </servlet-mapping>
+
     <servlet-mapping>
         <servlet-name>ServletGrade</servlet-name>
         <url-pattern>/ServletGrade/consulter</url-pattern>
     </servlet-mapping>
+
     <servlet-mapping>
         <servlet-name>ServletGrade</servlet-name>
         <url-pattern>/ServletGrade/modifier</url-pattern>
-        </servlet-mapping>
+    </servlet-mapping>
+
     <session-config>
         <session-timeout>
             30
